--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <div class="tile tile8">8</div>
         <div class="tile tileEmpty"></div>
     </div>
-    <script src="js.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
